k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spanish-quiz
  labels:
    app: spanish-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spanish-quiz
  template:
    metadata:
      labels:
        app: spanish-quiz
    spec:
      containers:
        - name: spanish-quiz
          image: tracardi/spanish-quiz:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
