k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spanish-quiz
  labels:
    app: spanish-quiz
spec:
  type: ClusterIP
  selector:
    app: spanish-quiz
  ports:
    - name: http
      port: 80
      targetPort: 80
