k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spanish-quiz-ai
  labels:
    app: spanish-quiz
spec:
  ingressClassName: nginx
  rules:
    - host: spanish.iasystant.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spanish-quiz
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spanish-quiz
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx

  rules:
    - host: spanish.tracardi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spanish-quiz
                port:
                  number: 80
